Optimization of startup time